--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="icon" type="image/png" sizes="16x16" href="./public/favicon-16x16.png" />
 		<link rel="manifest" href="./public/site.webmanifest" />
 
-		<link rel="stylesheet" href="/public/css/outputs_styles.css" />
+		<link rel="stylesheet" href="./public/css/outputs_styles.css" />
 
 		<script defer src="https://unpkg.com/alpinejs@3.10.2/dist/cdn.min.js"></script>
 	</head>
@@ -21,7 +21,7 @@
 			<nav class="box-border flex items-center justify-between w-full h-35 px-3 md:px-6 mx-auto my-0 py-4 leading-6 max-w-6xl">
 				<a href="#_" class="flex items-center font-medium text-gray-900 lg:w-auto title-font lg:items-center lg:justify-center md:mb-0">
 					<span class="text-xl font-black leading-none text-gray-900 select-none">
-						<img src="/public/img/logo.png" alt="IRAGI SOLUTIONS" class="sm:w-[180px] w-[120px]" />
+						<img src="./public/img/logo.png" alt="IRAGI SOLUTIONS" class="sm:w-[180px] w-[120px]" />
 					</span>
 				</a>
 				<div class="relative flex list-none lg:block" :class="{'flex fixed': showMenu, 'hidden': !showMenu }">
@@ -118,7 +118,7 @@
 					<div class="col-span-2 sm:flex sm:justify-between">
 						<div class="col-span-1">
 							<a href="#">
-								<img src="/public/img/logo_gray.svg" alt="IRAGI SOLUTIONS" width="120px" class="-mt-4" />
+								<img src="./public/img/logo_gray.svg" alt="IRAGI SOLUTIONS" width="120px" class="-mt-4" />
 							</a>
 						</div>
 						<div class="col-span-1 sm:mt-0 mt-8">
