--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					<div class="gri col-span-1 flex justify-items-center">
 						<img src="./public/img/service1.svg" alt="Conseil en communication" class="sm:w-[140px] w-[100px]" />
 					</div>
-					<div class="col-span-3">
+					<div class="col-span-3 sm:-ml-16">
 						<h2 class="text text-cgreen font-extrabold text-2xl mb-6 mt-8 sm:mt-0">Falicitation d’affaires</h2>
 						<p class="text-cgray">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy</p>
 					</div>
@@ -75,16 +75,16 @@
 					<div class="gri col-span-1 flex justify-items-center md:-m-6">
 						<img src="./public/img/service2.svg" alt="Conseil en communication" class="sm:w-[180px] w-[130px]" />
 					</div>
-					<div class="col-span-3">
+					<div class="col-span-3 sm:-ml-16">
 						<h2 class="text text-cgreen font-extrabold text-2xl mb-6 mt-8 sm:mt-0">Conseil en communication</h2>
-						<p class="text-cgray">Lorem ipsum dolor sit amet, takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+						<p class="text-cgray">De tout ce qui passeeeee ouiiiiiiiii Lorem ipsum dolor sit amet, takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
 					</div>
 				</div>
 				<div class="md:grid md:grid-cols-4 md:gap-8 w-full">
 					<div class="gri col-span-1 flex justify-items-center">
 						<img src="./public/img/service3.svg" alt="Conseil en communication" class="sm:w-[130px] w-[110px]" />
 					</div>
-					<div class="col-span-3">
+					<div class="col-span-3 sm:-ml-16">
 						<h2 class="text text-cgreen font-extrabold text-2xl mb-6 mt-8 sm:mt-0">Conseil en communication</h2>
 						<p class="text-cgray">Lorem ipsum dolor sit amet, takimata sanctus est Lorem ipsum dolor de la verture de tout ce qui se passe dans la mesure du tout sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
 					</div>
@@ -206,7 +206,7 @@
 		<section class="bg-cgray-100">
 			<div class="relative max-w-6xl mx-auto px-3 md:px-6 py-8">
 				<div class="absolute -top-4 right-3 sm:right-6">
-					<button class="text-cblack bg-cyellow p-2" x-data x-on:click.document="window.scrollTo(0, 0)">
+					<button class="text-cblack bg-cyellow p-2" onClick="window.scrollTo(0, 0)">
 						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
 							<path stroke-linecap="round" stroke-linejoin="round" d="M5 15l7-7 7 7" />
 						</svg>
