--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 		</section>
 
 		<section class="w-full bg-cblack-800">
-			<div class="max-w-6xl mx-auto px-3 md:px-6 py-20 sm:py-28 space-y-16 text-left">
+			<div class="max-w-6xl mx-auto px-3 md:px-6 py-20 sm:py-28 space-y-8 sm:space-y-16 text-left">
 				<div class="md:grid md:grid-cols-4 md:gap-8 w-full">
 					<div class="gri col-span-1 flex justify-items-center">
 						<img src="./public/img/service1.svg" alt="Conseil en communication" class="sm:w-[140px] w-[100px]" />
 					</div>
 					<div class="col-span-3 sm:-ml-16">
-						<h2 class="text text-cgreen font-extrabold text-2xl mb-6 mt-8 sm:mt-0">Falicitation d’affaires</h2>
+						<h2 class="text text-cgreen font-extrabold text-2xl mb-4 mt-6 sm:mt-0">Falicitation d’affaires</h2>
 						<p class="text-cgray">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy</p>
 					</div>
 				</div>
@@ -76,7 +76,7 @@
 						<img src="./public/img/service2.svg" alt="Conseil en communication" class="sm:w-[180px] w-[130px]" />
 					</div>
 					<div class="col-span-3 sm:-ml-16">
-						<h2 class="text text-cgreen font-extrabold text-2xl mb-6 mt-8 sm:mt-0">Conseil en communication</h2>
+						<h2 class="text text-cgreen font-extrabold text-2xl mb-4 mt-6 sm:mt-0">Conseil en communication</h2>
 						<p class="text-cgray">De tout ce qui passeeeee ouiiiiiiiii Lorem ipsum dolor sit amet, takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
 					</div>
 				</div>
@@ -85,7 +85,7 @@
 						<img src="./public/img/service3.svg" alt="Conseil en communication" class="sm:w-[130px] w-[110px]" />
 					</div>
 					<div class="col-span-3 sm:-ml-16">
-						<h2 class="text text-cgreen font-extrabold text-2xl mb-6 mt-8 sm:mt-0">Conseil en communication</h2>
+						<h2 class="text text-cgreen font-extrabold text-2xl mb-4 mt-6 sm:mt-0">Conseil en communication</h2>
 						<p class="text-cgray">Lorem ipsum dolor sit amet, takimata sanctus est Lorem ipsum dolor de la verture de tout ce qui se passe dans la mesure du tout sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
 					</div>
 				</div>
