--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<img src="./public/img/service1.svg" alt="Conseil en communication" class="sm:w-[75px] w-[80px] mx-auto" />
 						<p class="mt-6 text-xl font-bold">Conseil en communication</p>
 						<div class="flex justify-center">
-							<a href="#_" class="btn--segondary hover:underline opacity-80 lg:py-3 lg:px-8">
+							<a href="/src/services.html" class="btn--segondary hover:underline opacity-80 lg:py-3 lg:px-8">
 								<div class="flex justify-center">
 									<span>En savoir plus</span>
 									<span class="my-auto ml-3">
@@ -88,7 +88,7 @@
 						<img src="./public/img/service2.svg" alt="Conseil en communication" class="sm:w-[120px] w-[100px] mx-auto" />
 						<p class="mt-6 text-xl font-bold">Facilitationd’affaires</p>
 						<div class="flex justify-center">
-							<a href="#_" class="btn--segondary hover:underline opacity-80 lg:py-3 lg:px-8">
+							<a href="/src/services.html" class="btn--segondary hover:underline opacity-80 lg:py-3 lg:px-8">
 								<div class="flex justify-center">
 									<span>En savoir plus</span>
 									<span class="my-auto ml-3">
@@ -104,7 +104,7 @@
 						<img src="./public/img/service3.svg" alt="Conseil en communication" class="sm:w-[67px] w-[100px] mx-auto" />
 						<p class="mt-6 text-xl font-bold">Gestion et renforcement des compétences</p>
 						<div class="flex justify-center">
-							<a href="#_" class="btn--segondary hover:underline opacity-80 lg:py-3 lg:px-8">
+							<a href="/src/services.html" class="btn--segondary hover:underline opacity-80 lg:py-3 lg:px-8">
 								<div class="flex justify-center">
 									<span>En savoir plus</span>
 									<span class="my-auto ml-3">
