--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		</section>
 
 		<section class="bg-cblack w-full" id="sect1">
-			<div class="max-w-6xl mx-auto pt-16 pb-24 px-3 sm:px-6">
-				<div class="flex justify-between items-center">
+			<div class="max-w-6xl mx-auto pt-16 pb-16 sm:pb-24 px-3 sm:px-6">
+				<div class="md:flex md:justify-between items-center">
 					<div class="max-w-[400px]">
 						<h1 class="ctitle--h1 md:text-3xl lg:text-4xl xl:text-4xl text-white">
 							“Notre fierté est de faire en sorte que le monde vous voit sous votre meilleur
@@ -55,8 +55,8 @@
 							</a>
 						</div>
 					</div>
-					<div class="">
-						<img src="./public/img/contents/hero1.svg" alt="IRAGI SERVICES hero1.svg" class="w-[1000px] ml-16" />
+					<div class="md:mt-0 mt-8">
+						<img src="./public/img/contents/hero1.svg" alt="IRAGI SERVICES hero1.svg" class="w-[700px] sm:w-[1000px] md:ml-16" />
 					</div>
 				</div>
 			</div>
@@ -121,7 +121,7 @@
 		</section>
 
 		<section id="sect3">
-			<div class="mw max-w-6xl mx-auto px-3 sm:px-6 py-24">
+			<div class="mw max-w-6xl mx-auto px-3 sm:px-6 py-16 sm:py-24">
 				<div class="flex flex-col items-start mx-auto space-y-20 lg:space-y-0 lg:flex-row">
 					<div class="flex flex-col justify-center flex-shrink-0 w-full h-full max-w-lg space-y-5 text-gray-800 lg:max-w-none lg:w-5/12 xl:w-6/12">
 						<div class="max-w-sm">
@@ -130,34 +130,34 @@
 						</div>
 					</div>
 
-					<div class="max-w-lg lg:max-w-none lg:w-7/12 lg:pl-8 xl:w-6/12">
-						<div class="grid grid-cols-3 text-gray-400 gap-x-12 gap-y-6">
+					<div class="lg:max-w-none lg:w-7/12 lg:pl-8 xl:w-6/12">
+						<div class="w-full -mt-12 grid grid-cols-3 text-gray-400 gap-x-2 sm:gap-x-12 gap-y-6">
 							<a href="#_" class="flex items-center justify-center hover:text-gray-600">
-								<img class="w-auto fill-current h-10 sm:h-20" src="./public/img/partners/C1.png" alt="" />
+								<img class="w-auto fill-current h-20 sm:h-20" src="./public/img/partners/C1.png" alt="" />
 							</a>
 							<a href="#_" class="flex items-center justify-center hover:text-gray-600">
-								<img class="w-auto fill-current h-7 sm:h-28" src="./public/img/partners/C2.png" alt="" />
+								<img class="w-auto fill-current h-24 sm:h-28" src="./public/img/partners/C2.png" alt="" />
 							</a>
 							<a href="#_" class="flex items-center justify-center hover:text-gray-600">
-								<img class="w-auto fill-current h-7 sm:h-32" src="./public/img/partners/C3.png" alt="" />
+								<img class="w-auto fill-current h-32 sm:h-32" src="./public/img/partners/C3.png" alt="" />
 							</a>
 							<a href="#_" class="flex items-center justify-center hover:text-gray-600">
-								<img class="w-auto fill-current h-7 sm:h-20" src="./public/img/partners/C4.png" alt="" />
+								<img class="w-auto fill-current h-8 sm:h-20" src="./public/img/partners/C4.png" alt="" />
 							</a>
 							<a href="#_" class="flex items-center justify-center hover:text-gray-600">
-								<img class="w-auto fill-current h-7 sm:h-20" src="./public/img/partners/C5.png" alt="" />
+								<img class="w-auto fill-current h-8 sm:h-20" src="./public/img/partners/C5.png" alt="" />
 							</a>
 							<a href="#_" class="flex items-center justify-center hover:text-gray-600">
-								<img class="w-auto fill-current h-7 sm:h-12" src="./public/img/partners/C6.png" alt="" />
+								<img class="w-auto fill-current h-8 sm:h-12" src="./public/img/partners/C6.png" alt="" />
 							</a>
 							<a href="#_" class="flex items-center justify-center hover:text-gray-600">
-								<img class="w-auto fill-current h-7 sm:h-28" src="./public/img/partners/C7.png" alt="" />
+								<img class="w-auto fill-current h-24 sm:h-28" src="./public/img/partners/C7.png" alt="" />
 							</a>
 							<a href="#_" class="flex items-center justify-center hover:text-gray-600">
-								<img class="w-auto fill-current h-7 sm:h-16" src="./public/img/partners/C8.png" alt="" />
+								<img class="w-auto fill-current h-6 sm:h-16" src="./public/img/partners/C8.png" alt="" />
 							</a>
 							<a href="#_" class="flex items-center justify-center hover:text-gray-600">
-								<img class="w-auto fill-current h-7 sm:h-16" src="./public/img/partners/C9.png" alt="" />
+								<img class="w-auto fill-current h-8 sm:h-16" src="./public/img/partners/C9.png" alt="" />
 							</a>
 						</div>
 					</div>
