--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 			<div class="nav--section w-full"></div>
 		</section>
 
-		<section class="bg-cblack w-full" id="sect1">
+		<section class="bg-cblack w-full mt-24 sm:mt-32" id="sect1">
 			<div class="max-w-6xl mx-auto pt-16 pb-16 sm:pb-24 px-3 sm:px-6">
-				<div class="md:flex md:justify-between items-center">
+				<div class="lg:flex lg:justify-between items-center">
 					<div class="max-w-[400px]">
 						<h1 class="ctitle--h1 md:text-3xl lg:text-4xl xl:text-4xl text-white">
 							“Notre fierté est de faire en sorte que le monde vous voit sous votre meilleur
@@ -56,7 +56,7 @@
 						</div>
 					</div>
 					<div class="md:mt-0 mt-8">
-						<img src="./public/img/contents/hero1.svg" alt="IRAGI SERVICES hero1.svg" class="w-[700px] sm:w-[1000px] md:ml-16" />
+						<img src="./public/img/contents/hero1.svg" alt="IRAGI SERVICES hero1.svg" class="w-[700px] lg:w-[1000px] md:ml-16" />
 					</div>
 				</div>
 			</div>
