--- a/src/services.html
+++ b/src/services.html
@@ -18,10 +18,10 @@
 	<body>
 		<!-- Section 1 -->
 		<section class="bg-white relative lightMode">
-			<div class="nav--section w-full"></div>
+			<div class="nav--section w-full bg-white"></div>
 		</section>
 
-		<section class="w-full bg-cgray-100">
+		<section class="w-full bg-cgray-100 mt-24 sm:mt-32">
 			<div class="box-border flex-grow w-full mx-auto leading-6 px-3 md:px-6 max-w-6xl sm:py-24 py-16">
 				<div class="relative w-full leading-6 text-center lg:flex-grow-0 lg:flex-shrink-0">
 					<p class="mb-2"><span class="text-cgreen text-sm">./home/services</span></p>
