--- a/index.html
+++ b/index.html
@@ -17,50 +17,52 @@
 	</head>
 	<body>
 		<!-- Section 1 -->
-		<section class="bg-cblack relative darkMode">
-			<div class="nav--section w-full"></div>
-		</section>
+		<div class="bg-cblack relative w-full">
+			<section class="bg-cblack relative darkMode">
+				<div class="nav--section w-full"></div>
+			</section>
 
-		<section class="bg-cblack w-full mt-24 sm:mt-32" id="sect1">
-			<div class="max-w-6xl mx-auto pt-16 pb-16 sm:pb-24 px-3 sm:px-6">
-				<div class="lg:flex lg:justify-between items-center">
-					<div class="max-w-[400px]">
-						<h1 class="ctitle--h1 md:text-3xl lg:text-4xl xl:text-4xl text-white">
-							“Notre fierté est de faire en sorte que le monde vous voit sous votre meilleur
+			<section class="bg-cblack w-full mt-24 sm:mt-32" id="sect1">
+				<div class="max-w-6xl mx-auto pt-16 pb-16 sm:pb-24 px-3 sm:px-6">
+					<div class="lg:flex lg:justify-between items-center">
+						<div class="max-w-[400px]">
+							<h1 class="ctitle--h1 md:text-3xl lg:text-4xl xl:text-4xl text-white">
+								“Notre fierté est de faire en sorte que le monde vous voit sous votre meilleur
 
-							<span class="relative inline-block">
-								<span class="relative z-10 p-4 text-cyellow">jour.</span>
-								<svg class="w-full fill-current opacity-50 z-0 rotate-12 -mt-2 text-yellow-300 absolute right-0 top-0" viewBox="0 0 386 189" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<path
-										fill-rule="evenodd"
-										clip-rule="evenodd"
-										d="M91.315 32.349c-43.9 18.5-66.3 38.1-72.8 63.8-1.3 5.3-2.9 8.5-6.1 12.5-19.2 24.1-15.9 50.4 8.3 66.5 25.5 16.9 97.2 17.9 174 2.4 11-2.2 28.8-5.4 39.5-7 133.3-20.1 177.8-79 137.4-119.6-24.6-24.8-60.9-35.4-121.4-35.8-57.6-.3-134.1 23.6-189.2 56.5-14.4 8.6-16.1 5.2-11.9.8 14.8-15.6 54.7-35.9 96.4-48.2 37.2-11 54.4-15.5 82.3-15.7 10.9-.1 17.2-7.6.4-8.5-17.8-.8-89.2 12.2-136.9 32.3Zm268.1 74.9c-17.7 22.2-58.5 38.7-124.6 50.2-220.9 38.4-203.5-44.7-203.5-44.7.2-.1 69.7-68.8 206.5-85.5 67.3-8.3 174.6 13.5 121.6 80Zm-263.8 67.4c22.8 3.1-4 3.7-37.8.9-63-5.2-44.8-41.5-39-47.5 18.8 27.1 44.9 42.3 76.8 46.6Z"
-									></path>
-								</svg>
-							</span>
-							”
-						</h1>
-						<p class="text-cwhite mt-8">Vous aider à simplifier la vie au maximum est notre objectif en vous proposant des services de conseil et d’assistance technique</p>
-						<div class="mt-8">
-							<a href="#_" class="btn--primary btn--primary__y lg:py-3 lg:px-8">Contactez-nous</a>
-							<a href="#_" class="btn--segondary btn--segondary__y lg:py-3 lg:px-8">
-								<div class="flex justify-center">
-									<span>En savoir plus</span>
-									<span class="my-auto ml-3">
-										<svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-											<path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
-										</svg>
-									</span>
-								</div>
-							</a>
+								<span class="relative inline-block">
+									<span class="relative z-10 p-4 text-cyellow">jour.</span>
+									<svg class="w-full fill-current opacity-50 z-0 rotate-12 -mt-2 text-yellow-300 absolute right-0 top-0" viewBox="0 0 386 189" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path
+											fill-rule="evenodd"
+											clip-rule="evenodd"
+											d="M91.315 32.349c-43.9 18.5-66.3 38.1-72.8 63.8-1.3 5.3-2.9 8.5-6.1 12.5-19.2 24.1-15.9 50.4 8.3 66.5 25.5 16.9 97.2 17.9 174 2.4 11-2.2 28.8-5.4 39.5-7 133.3-20.1 177.8-79 137.4-119.6-24.6-24.8-60.9-35.4-121.4-35.8-57.6-.3-134.1 23.6-189.2 56.5-14.4 8.6-16.1 5.2-11.9.8 14.8-15.6 54.7-35.9 96.4-48.2 37.2-11 54.4-15.5 82.3-15.7 10.9-.1 17.2-7.6.4-8.5-17.8-.8-89.2 12.2-136.9 32.3Zm268.1 74.9c-17.7 22.2-58.5 38.7-124.6 50.2-220.9 38.4-203.5-44.7-203.5-44.7.2-.1 69.7-68.8 206.5-85.5 67.3-8.3 174.6 13.5 121.6 80Zm-263.8 67.4c22.8 3.1-4 3.7-37.8.9-63-5.2-44.8-41.5-39-47.5 18.8 27.1 44.9 42.3 76.8 46.6Z"
+										></path>
+									</svg>
+								</span>
+								”
+							</h1>
+							<p class="text-cwhite mt-8">Vous aider à simplifier la vie au maximum est notre objectif en vous proposant des services de conseil et d’assistance technique</p>
+							<div class="mt-8">
+								<a href="#_" class="btn--primary btn--primary__y lg:py-3 lg:px-8">Contactez-nous</a>
+								<a href="#_" class="btn--segondary btn--segondary__y lg:py-3 lg:px-8">
+									<div class="flex justify-center">
+										<span>En savoir plus</span>
+										<span class="my-auto ml-3">
+											<svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+												<path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+											</svg>
+										</span>
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="md:mt-0 mt-8">
+							<img src="./public/img/contents/hero1.svg" alt="IRAGI SERVICES hero1.svg" class="w-[700px] lg:w-[1000px] md:ml-16" />
 						</div>
 					</div>
-					<div class="md:mt-0 mt-8">
-						<img src="./public/img/contents/hero1.svg" alt="IRAGI SERVICES hero1.svg" class="w-[700px] lg:w-[1000px] md:ml-16" />
-					</div>
 				</div>
-			</div>
-		</section>
+			</section>
+		</div>
 
 		<section class="bg-cgreen w-full" id="sect2">
 			<div class="max-w-6xl mx-auto pt-16 pb-24 px-3 sm:px-6">
